# grpc4bmi-examples

./: .gitignore  .gitmodules  README.md  requirements.txt
heat-cxx/: README.md  grpc4bmi.cc
lisflood/: Dockerfile  README.md
pcrglob/: Dockerfile  pcrg-bmi-docker-psfetch.ipynb  pcrg-bmi-docker.ipynb  pcrg_rhinemeuse.ini
pcrglob/ewatercycle/parametersetdb/: __init__.py
psfetch/: pyproject.toml
psfetch/ewatercycle/: __init__.py
psfetch/ewatercycle/parametersetdb/: __init__.py
toymodel/: toymodel-bmi-docker.ipynb
walrus/: Dockerfile  README.md  abstract-bmi.r  bmi-server.r  walrus-bmi-psfetch.ipynb  walrus-bmi-server.r  walrus-bmi.ipynb  walrus-bmi.r  walrus.yml
wflow/: Dockerfile  README.md  wflow-bmi-docker-psfetch.ipynb  wflow-bmi-docker.ipynb  wflow_sbm.ini  wflow_sbm_rhine_hydrograph.ipynb
wflow-sbm/: Dockerfile  wflow-sbm-bmi-docker.ipynb
wflow-topoflex/: Dockerfile  wflow-topoflex-bmi-docker.ipynb
