[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "ewatercycle"
author = "Stefan Verhoeven"
author-email = "s.verhoeven@esciencecenter.nl"
home-page = "https://github.com/eWaterCycle"
classifiers = ["License :: OSI Approved :: Apache Software License"]

